[package]
name = "ncursesw-win"
version = "0.4.1"
authors = ["Steve Whittle <narfit66@googlemail.com>"]
edition = "2018"
description = "An extension wrapper around the ncursesw-rs TUI library (ncurses) that encapsulates the exposed raw pointers of the core library"
repository = "https://github.com/narfit66/ncursesw-win-rs"
readme = "README.md"
keywords = ["ncurses", "TUI"]
license = "MIT"

[badges]
travis-ci = { repository = "narfit66/ncursesw-win-rs", branch = "master" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "narfit66/ncursesw-win-rs" }
is-it-maintained-open-issues = { repository = "narfit66/ncursesw-win-rs" }

[workspace]

[dependencies]
libc = "0.2"
ncursesw = "0.4"
custom_error = "1.7"
lazy_static = "1.4"
strum = "0.17"
strum_macros = "0.17"
errno = "0.2"

[dev-dependencies]
ascii = "1.0"
rand = "0.7"

[patch.crates-io]
ncursesw = { git = "https://github.com/narfit66/ncursesw-rs" }
#ncursesw = { path = "../ncursesw-rs" }

[features]
#key_resize_as_error = ["ncursesw/key_resize_as_error"]
#key_event_as_error = ["ncursesw/key_event_as_error"]

[lib]
name = "ncurseswwin"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
