[package]
name = "ncursesw-win"
version = "0.6.3"
authors = ["Steve Whittle <narfit66@googlemail.com>"]
edition = "2021"
description = "An extension wrapper around the ncursesw-rs crate that encapsulates the exposed raw pointers of the core NCurses TUI library"
homepage = "https://lib.rs/crates/ncursesw-win"
repository = "https://github.com/narfit66/ncursesw-win-rs"
documentation = "https://docs.rs/ncursesw-win"
readme = "README.md"
keywords = [ "ncurses", "TUI" ]
categories = [ "api-bindings", "command-line-interface" ]
license = "MIT"

[badges]
travis-ci = { repository = "narfit66/ncursesw-win-rs", branch = "master" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "narfit66/ncursesw-win-rs" }
is-it-maintained-open-issues = { repository = "narfit66/ncursesw-win-rs" }

[workspace]

[dependencies]
libc = "0.2"
ncursesw = "0.6"
thiserror = "1.0"
lazy_static = "1.4"
strum = "0.23"
strum_macros = "0.23"
errno = "0.2"
anyhow = "1.0"

[dev-dependencies]
ascii = "1.0"
rand = "0.8"
gettext-rs = "0.7"

[patch.crates-io]
ncursesw = { git = "https://github.com/narfit66/ncursesw-rs" }
#ncursesw = { path = "../ncursesw-rs" }

[features]
#key_resize_as_error = [ "ncursesw/key_resize_as_error" ]

[package.metadata.docs.rs]
features = [ "ncursesw/docs-rs" ] # This feature will be enabled during the docs.rs build.

[lib]
name = "ncurseswwin"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
